--- a/02_segunda_semana_agosto/src/main/resources/application.properties
+++ b/02_segunda_semana_agosto/src/main/resources/application.properties
@@ -1,21 +1,19 @@
+#CONEXï¿½O COM O BANCO DE DADOS
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.datasource.url=jdbc:mysql://localhost:3307/projeto2022?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.password=
 
-#Conexão com o banco de dados
 
-spring.datasource.url      = jdbc:mysql://localhost/projeto2022?createDatabaseIfNotExit=true&useSSL=false&useTimezone=true&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8 
-spring.datasource.username = root
-#spring.datasource.password =
-
-#Como vou acessar o banco de dados
-
-spring.jpa.database     = MYSQL
-spring.jpa.show-sql     = true
-spring.jpa.generate-ddl = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.dialect=org.hibernate.dialect.MySQL5Dialect
+#COMO VOU ACESSAR O BANCO DE DADOS
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.current_session_context_class=thread
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creatin=true
  
 
- 
- 
