--- a/03_terceira_semana_agosto/pom.xml
+++ b/03_terceira_semana_agosto/pom.xml
@@ -12,7 +12,6 @@
 	<artifactId>projeto</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>AppVendas</name>
-	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>13</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,10 +35,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-rest</artifactId>
-		</dependency>
+		
 		<dependency>
 		    <groupId>net.sf.jasperreports</groupId>
     		<artifactId>jasperreports</artifactId>
@@ -55,8 +51,9 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		
 	</dependencies>
